# C-Veia

./: CMakeLists.txt  README.md
src/: plain_table.cpp  plain_table.hpp  string_table.cpp  string_table.hpp
src/cli/: cli_tic_tac_toe.cpp  cli_tic_tac_toe.h  human_player.cpp  human_player.h  human_player_exceptions.h  main.cpp  menu.cpp  menu.h  menu_enum.h  player_type.h  screen.cpp  screen.h  string_table.cpp  string_table.h  string_table.hpp  utils.cpp  utils.h
src/exceptions/player/: player_exceptions.h
src/exceptions/table/: table_exceptions.h
src/exceptions/tic_tac_toe/: tic_tac_toe_exceptions.h
src/lib/: ai.h  human.h  plain_table.cpp  player.cpp  player.h  string_table.cpp  string_table.hpp  tic_tac_toe.h
src/lib/exceptions/player/: player_exceptions.h
src/lib/exceptions/table/: table_exceptions.h
src/lib/exceptions/tic_tac_toe/: tic_tac_toe_exceptions.h
src/lib/player/: ai.cpp  ai.h  ai_min_max.h  ai_min_max_pruned.h  human.cpp  human.h  player.cpp  player.h  player_move.h  players_enum.h
src/lib/table/: plain_table.cpp  plain_table.h  plain_table.hpp  string_table.cpp
src/lib/tic_tac_toe/: tic_tac_toe.cpp  tic_tac_toe.h  tic_tac_toe_config.h  tic_tac_toe_enum.h  tic_tac_toe_factory.h
